syntax = "proto3";

package auth_proto;

option go_package = "/auth_proto";


service AuthService {
  rpc Authorization (AuthorizationRequest) returns (AuthorizationResponse);
}

message AuthorizationRequest {
  string token = 1;
  string requiredRole = 2;
}

message AuthorizationResponse {
  bool isAuthorized = 1;
}